<resources>
    <string name="app_name">waddles_app</string>
    <string name="next">NEXT</string>
    <string name="tryConnecting">TRY CONNECTING</string>
    <string name="refresh">REFRESH THE LIST</string>
    <string name="welcomeMsg">SET BLUETOOTH CONNECTION</string>
    <string name="waitMsg">waiting for connection</string>
    <string name="spinnerPrompt">AVAILABLE BLUETOOTH DEVICES</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>